# mskpy

./: .gitignore  AUTHORS  CHANGES.rst  MANIFEST.in  README.md  README.rst  runtests.py  setup.cfg  setup.py  tox.ini
analysis/3i-jwst-nucleus/: README.md
analysis/3i-jwst-nucleus/miri/: centers-v7.csv  fit-v8.py  psf-neatm.py  psf-v2a.py
analysis/3i-jwst-nucleus/nircam/: centers-v7.csv  fit-v8.py  psf-v6.py
data/: e490-lowres.txt  gen-e490.py  tr_13800ft_3.4mm_15-25.txt  tr_14000ft_3.3mm_7.0_14.0.txt  wehrli85.txt
data/filters/2mass/: hrsr.tbl  krsr.tbl
data/filters/sofia/: FOR-20um-542-090-091.txt  N06611.txt  (+3 more)
docs/: conf.py  index.rst
docs/mskpy/: index.rst
examples/: hb-cal.py
licenses/: DAVINT_LICENSE  LICENSE.rst
mskpy/: Comet.py  __init__.py  asteroid.py  calib.py  catalogs.py  comet.py  config.py  ds9.py  ephem.py  fitting.py  graphics.py  image.py  modeling.py  models.py  photometry.py  polarimetry.py  util.py
mskpy/astrometry/: __init__.py  ginga_plugin.py
mskpy/data/: E490_00a_AM0.txt  E490_00a_AM0.xls  E490_00a_AM0_abridged.txt  E490_00a_AM0_smoothed0.005.txt  calspec-jwst-nirspec-prism.ecsv  dustphaseHM_table.txt  e490-lowres.txt  neckel84-table3.txt  neckel84.txt  tr_13800ft_2.5mm_15-25.txt  tr_13800ft_2.5mm_7.4_14.0.txt  tr_9100ft_5.7mm_7.2_13.6.txt  wehrli85_smoothed0.005.txt
mskpy/ephem/: __init__.py  core.py  geom.py  ssobj.py  state.py
mskpy/image/: __init__.py  analysis.py  core.py  process.py
mskpy/instruments/: __init__.py  hst.py  instrument.py  irtf.py  jwst.py  midir.py  polarimetry.py  rubin.py  sdss.py  sofia.py  spitzer.py  vis.py
mskpy/lib/: __init__.py
mskpy/models/: __init__.py  dust.py  surfaces.py
mskpy/observing/: __init__.py  core.py  finding.py
mskpy/photometry/: __init__.py  core.py  hb.py  outbursts.py
mskpy/tests/: __init__.py  test_mskpy.py  test_util.py
scripts/: D2m  H2D  ads  center-target  comet-fest  decam-dl.py  ds9-ext  ephemeris  horizons2dct-tcs  irs-plot  lmi-dither  transit
src/davint/: davint.f  davint.pyf  setup_package.py
tests/: test_comet.py  test_ephem.py  test_image.py  test_instruments.py  test_modeling.py  test_models.py  test_photometry.py  test_util.py
(+31 files in other folders)
